--- a/fdroid/config.yml
+++ b/fdroid/config.yml
@@ -51,7 +51,7 @@ sdk_path: /home/molyuu/Android/Sdk
 # repo_maxage: 0
 
 repo_url: https://raw.githubusercontent.com/Molyuu/fcitx5_android-fdroid-repo/main/fdroid/repo
-repo_name: Fcit5-Android Repo
+repo_name: Fcitx5-Android Repo
 # repo_description: >-
 #   This is a repository of apps to be used with F-Droid. Applications
 #   in this repository are either official binaries built by the
